# pygfwx

./: .codemap.md  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
cross_codec/: __init__.py  gfwx_sdk.py
cross_codec/compare/: __init__.py
cross_codec/debug/: __init__.py
cross_codec/reference/: __init__.py
cross_codec/validation/: __init__.py
diagnostics/: .gitkeep  analyze_block_sizes.py  debug_encoder.py  trace_bits.py  trace_step2.py
examples/: README.md  basic_usage.py  cat_demo.py  compression_walkthrough.py  progressive_demo.py
notes/: bitstream.md  compression_overview.md  context_modeling.md  future_work.md  golomb_rice.md  lifting_scheme.md  pygfwx_project_plan.md  python_overview.md  sdk_api.md  wavelet_transform.md
src/pygfwx/: __init__.py  cli.py
src/pygfwx/core/: __init__.py  bayer.py  bitstream.py  block_decoder.py  block_encoder.py  codec.py  context.py  decoder.py  encoder.py  golomb_rice.py  header.py  lifting.py  metadata.py  multi_layer.py  quantization.py  transforms.py
src/pygfwx/debug/: __init__.py  hexdump.py  visualize.py
src/pygfwx/streaming/: __init__.py  progressive.py
src/pygfwx/utils/: __init__.py  image_io.py  reference_images.py
tests/: __init__.py  conftest.py  test_bayer.py  test_bitstream.py  test_block_decoder.py  test_cli.py  test_color_transforms_e2e.py  test_context.py  test_debug.py  test_decoder.py  test_encoder.py  test_golomb_rice.py  test_header.py  test_image_io.py  test_infrastructure.py  test_lifting.py  test_metadata.py  test_multi_layer.py  test_progressive.py  test_quantization.py  test_roundtrip.py  test_sdk_wrapper.py  test_transforms.py  test_utils.py
